# Work4Food

./: README.md  environment.yml
code/: README.md  main.cpp
code/analysis_scripts/: overflow_analysis.py  performance_analysis.py
code/analysis_scripts/de_intervals/: A_1.csv
code/gpr_models/: model_A_days_2_and_5_25_static_frac_pay_2.parameters  model_A_days_2_and_5_25_static_frac_pay_2.pt  model_A_days_2_and_5_25_static_frac_pay_2.pth  model_A_days_2_and_5_25_static_pay_2.parameters  model_A_days_2_and_5_25_static_pay_2.pt  model_A_days_2_and_5_25_static_pay_2.pth
code/gpr_training/: work_predict.py
code/gpr_training/de_intervals/: A_2.csv  A_5.csv
code/include/: constants.cpp  constants.hpp  gaussian_process.cpp  gaussian_process.hpp  global.cpp  global.hpp  graph_util.cpp  routeplan.cpp  routeplan.hpp  vehicle.cpp  vehicle.hpp  vehicle_assignment.cpp  vehicle_assignment.hpp
code/pytorch-cpp/: CMakeLists.txt
